--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 #
-org.gradle.jvmargs=-Xmx2G
+org.gradle.jvmargs=-Xmx2G -XX:+UseParallelGC
 org.gradle.caching=true
 kotlin.code.style=official
 loom.platform=forge
