--- a/events/versions/1.8.9-fabric/gradle.properties
+++ b/events/versions/1.8.9-fabric/gradle.properties
@@ -1,6 +1,6 @@
 #
 # Skytils - Hypixel Skyblock Quality of Life Mod
-# Copyright (C) 2020-2023 Skytils
+# Copyright (C) 2020-2024 Skytils
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU Affero General Public License as published
@@ -15,8 +15,6 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 #
-org.gradle.jvmargs=-Xmx2G -XX:+UseParallelGC
-org.gradle.caching=true
-kotlin.code.style=official
 
-essential.defaults.loom=1
+essential.defaults.loom.mappings=net.legacyfabric.v2:yarn:1.8.9+build.542:v2
+essential.defaults.fabric-loader=net.fabricmc:fabric-loader:0.15.10
